[project]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Aman Verma",email = "84333633+AmanV07@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
